--- a/indexAdmin.html
+++ b/indexAdmin.html
@@ -149,7 +149,8 @@
                 <div class="tileLeftPartDetails">
                     <input ng-model="item.Title" />
                     <tags item="item"></tags>
-                   
+                    <input ng-model="item.Width" />
+                    <input ng-model="item.Height" />
 
                 </div>
             </div>
