--- a/indexAdmin.html
+++ b/indexAdmin.html
@@ -145,14 +145,17 @@
             
             </div>
             <div class="tileLeftPart">
-                <img src="{{apiRootUrl}}/{{item.Images[0].Url}}" />
-                <div class="tileLeftPartDetails">
-                    <input ng-model="item.Title" />
-                    <tags item="item"></tags>
-                    <input ng-model="item.Width" />
-                    <input ng-model="item.Height" />
+                <div class="vignette">
+                    <img class="tileHeroImage width{{item.Width}}"  src="{{apiRootUrl}}/{{item.Images[0].Url}}" />
+                    <div class="tileLeftPartDetails">
+                        <input ng-model="item.Title" />
+                        <tags item="item"></tags>
+                        <input ng-model="item.Width" />
+                        <input ng-model="item.Height" />
 
+                    </div>
                 </div>
+               
             </div>
             <div class="tileTextArea">
                 <div class="details" ng-repeat="detail in item.Details" ng-controller="tileDetailController">
