--- a/index.html
+++ b/index.html
@@ -17,9 +17,30 @@ html, body { height: 100%;
              color: rgb(255, 255, 255);
              overflow-x:hidden;
              overflow-y:hidden;
+
+
+
+}
+/* Let's get this party started */
+::-webkit-scrollbar {
+    width: 4px;
+}
+ 
+/* Track */
+::-webkit-scrollbar * {
+background:transparent !important; 
 }
 
-
+/* Handle */
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    background: rgba(0,0,0,0.5); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+::-webkit-scrollbar-thumb:window-inactive {
+	background: rgb(255, 106, 0,0.8); 
+}
     </style>
 </head>
 <body ng-app="BookFlo" ng-controller="mainController" ng-init="init()">
@@ -69,8 +90,10 @@ html, body { height: 100%;
 
                         <div class="details">
                             <p class="tile-header">{{item.Title}}</p>
+                            <hr />
                             <p>{{item.Description}}</p>
                         </div>
+                       
 
                         <img class="tileHeroImage width{{item.Width}}" src="{{apiRootUrl}}/{{item.Images[0].Url}}" />
 
