--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                
             </div>
             <script src="js/jquery-1.9.1.js"></script>
+            <script src="js/jquery.mousewheel.min.js"></script>
             <!--<script src="js/isotope/isotope.pkgd.js"></script>
             <script src="js/isotope/masonryHorizontal.js"></script>-->
             <script src="js/isotope/jquery.isotope.js"></script>
