--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
             <div id="booksContainer" class="tilesContainer">
-                <div class="tile {{item.Theme}} {{item.Tags}}" ng-repeat="item in items" isotopethis=isotopethis>
+                <div class="tile {{item.Theme|lowercase}} {{item.Tags|lowercase}}" ng-repeat="item in items" isotopethis=isotopethis>
                     <div class="inner-tile">
 
                         <div class="details hidden-object">
@@ -49,16 +49,14 @@
                             <hr />
                             <p>{{item.Description}}</p>
                         </div>
-                       
+
 
                         <img class="tileHeroImage width{{item.Width}}" src="{{apiRootUrl}}/{{item.Images[0].Url}}" />
 
 
                         <!--<div class="tileLeftPartDetails">
-            <a ng-repeat="tag in item.Tags" class="tag">{{tag}}</a>
-        </div>-->
-
-
+                <a ng-repeat="tag in item.Tags" class="tag">{{tag}}</a>
+            </div>-->
                         <!--ng-repeat"item in items | filter:(items.indexOf(item)%3 == 0)-->
                         <div class="details hidden-object" ng-repeat="detail in item.Details">
                             <div ng-switch="detail.type">
