--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,7 @@
     <title>Editions Thierry Magnier</title>
     <link href="css/Tiles4.css" rel="stylesheet" />
     <link href="css/Menu2.css" rel="stylesheet" />
+    <link href='http://fonts.googleapis.com/css?family=Josefin+Slab' rel='stylesheet' type='text/css' />
 
 </head>
 <body ng-app="BookFlo" ng-controller="mainController" ng-init="init()">
