--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Editions Thierry Magnier</title>
+    <title>Florie Briand's portfolio</title>
     <link href="css/Tiles4.css" rel="stylesheet" />
     <link href="css/Menu2.css" rel="stylesheet" />
     <link href='http://fonts.googleapis.com/css?family=Josefin+Slab' rel='stylesheet' type='text/css' />
