--- a/index2.html
+++ b/index2.html
@@ -39,6 +39,7 @@
 
     </div>
 
+    <div class="tilesContainer-background"></div>
 
     <div id="booksContainer" class="tilesContainer">
         <div class="tile {{item.Theme|lowercase}} {{item.Tags|lowercase}}" ng-repeat="item in items" isotopethis=isotopethis>
@@ -76,6 +77,7 @@
     <script src="js/isotope/jquery.isotope.js"></script>
     <!--contains easing animations as well -->
     <script src="js/jquery-ui-1.10.3.custom.min.js"></script>
+    <script src="js/linq.js_ver2.2.0.2/jquery.linq.js"></script>
     <script src="js/stuff.js"></script>
 
     <script type="text/javascript" src="js/angular.min.js"></script>
