--- a/index2.html
+++ b/index2.html
@@ -42,7 +42,7 @@
     <div class="tilesContainer-background"></div>
 
     <div id="booksContainer" class="tilesContainer">
-        <div class="tile {{item.Theme|lowercase}} {{item.Tags|lowercase}}" ng-repeat="item in items" isotopethis=isotopethis>
+        <div class="tile isotopey {{item.Theme|lowercase}} {{item.Tags|lowercase}}" ng-repeat="item in items" isotopethis=isotopethis>
             <div class="inner-tile">
 
 
